update network code

--- a/Main_Network_Code.ipynb
+++ b/Main_Network_Code.ipynb
@@ -4,10 +4,9 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "Main Network Code.ipynb",
+      "name": "Main_Network_Code.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -28,16 +27,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rohit901/ForeheadCreases/blob/main/Main_Network_Code.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -800,7 +789,6 @@
         "scrolled": false
       },
       "source": [
-        "val_acc = []\n",
         "train_acc = []\n",
         "loss_list = []\n",
         "for i in range(opt.max_epoch):\n",
@@ -835,22 +823,9 @@
         "    if i % opt.save_interval == 0 or i == opt.max_epoch:\n",
         "        save_model(model, opt.checkpoints_path, \"Model_Weights\", i)\n",
         "        \n",
-        "    model.eval()\n",
-        "    correct_val = 0\n",
-        "    total_val = 0\n",
-        "    with torch.no_grad():\n",
-        "        for vdata in test_loader:\n",
-        "            vimage, vlabel = vdata[0].to(device), vdata[1].to(device).long()\n",
-        "            val_feature = model(vimage)\n",
-        "            val_output = metric_fc(val_feature, vlabel)\n",
-        "            val_output = val_output.data.cpu().numpy()\n",
-        "            val_output = np.argmax(val_output, axis = 1)\n",
-        "            vlabel = vlabel.data.cpu().numpy()\n",
-        "            total_val += vlabel.shape[0]\n",
-        "            correct_val += (val_output == vlabel).sum().item()\n",
-        "    val_acc.append(np.round(100 * correct_val / total_val,2))\n",
+        "    \n",
         "    train_acc.append(np.round(100 * correct_train / total_train,2))\n",
-        "    print(f\"Epoch: {i+1}, Validation Accuracy: {np.round(100 * correct_val / total_val,2)}%, Training Accuracy: {np.round(100 * correct_train / total_train,2)}%, Loss: {np.round(running_loss / total_train,2)}\")\n",
+        "    print(f\"Epoch: {i+1}, Training Accuracy: {np.round(100 * correct_train / total_train,2)}%, Loss: {np.round(running_loss / total_train,2)}\")\n",
         "    loss_list.append(np.round(running_loss / total_train,2) )\n",
         "    scheduler.step()\n",
         "\n",
@@ -867,22 +842,6 @@
         "             )\n",
         "plt.plot(range(1,opt.max_epoch+1), train_acc)\n",
         "plt.savefig(\"train_accuracy.png\")\n",
-        "\n",
-        "\n",
-        "plt.figure(figsize=(10,6))\n",
-        "plt.title(\"Testing Accuracy\")\n",
-        "plt.xlabel(\"Number of Epochs\")\n",
-        "plt.ylabel(\"Accuracy (%)\")\n",
-        "\n",
-        "plt.annotate(f'Maximum Accuracy\\n at ({np.argmax(val_acc)+1}, {max(val_acc)}) ', xy=(np.argmax(val_acc)+1, max(val_acc)), xytext=(np.argmax(val_acc)-4, max(val_acc)-10),\n",
-        "             arrowprops=dict(facecolor='black', shrink=0.05),\n",
-        "             )\n",
-        "plt.annotate(f'Accuracy\\n ({len(val_acc)}, {val_acc[-1]}) ', xy=(len(val_acc), val_acc[-1]), xytext=(len(val_acc)-10, val_acc[-1]-5),\n",
-        "             arrowprops=dict(facecolor='blue', shrink=0.05),\n",
-        "             )\n",
-        "plt.plot(range(1,opt.max_epoch+1), val_acc)\n",
-        "plt.savefig(\"test_accuracy.png\")\n",
-        "\n",
         "\n",
         "plt.figure(figsize = (10,6))\n",
         "plt.title(\"loss Curve\")\n",
